Add navbar and footer with style

--- a/views/Listings/index.ejs
+++ b/views/Listings/index.ejs
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
+<% layout('/layouts/boilerplate.ejs') %>
 <body>
     <h2>All listing</h2>
 
-    <form action="/listings/new" method="GET">
+    <!-- <form action="/listings/new" method="GET">
         <button>List new Hotel</button>
-    </form>
+    </form> -->
 
     <ul>
 
@@ -28,4 +22,3 @@
         </ul>
 
 </body>
-</html>
