--- a/views/Listings/new.ejs
+++ b/views/Listings/new.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html> 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wanderlust</title>
-</head>
+<% layout('/layouts/boilerplate.ejs') %>
 <body>
     <h2>Add new Hotel</h2>
     <form method="post" action="/listings">
@@ -17,5 +11,5 @@
         <button>Add on List</button>
     </form>
 </body>
-</html>
+
 
