--- a/views/Listings/edit.ejs
+++ b/views/Listings/edit.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
+<% layout('/layouts/boilerplate.ejs') %>
 <body>
     <h2>Edit listing</h2>
 
@@ -20,8 +14,6 @@
         <br><br>
         <button>Conform</button>
     </form>
-</body>
-</html>
 
 <script>
     let a = document.getElementById("Preview");
