--- a/views/Listings/show.ejs
+++ b/views/Listings/show.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
+<% layout('/layouts/boilerplate.ejs') %>
 <body>
     <h2><%= listing.title  %></h2>
     
@@ -32,4 +26,3 @@
         </ul>
 
 </body>
-</html>
