--- a/views/Listings/show.ejs
+++ b/views/Listings/show.ejs
@@ -14,6 +14,7 @@
                 
                 <img src="<%= listing.image  %>" alt="">
                 <p><%= listing.description  %></p>
+                <p><%= listing.price.toLocaleString("en-IN")  %></p>
                 <p><%= listing.location  %></p>
                 <p><%= listing.country  %></p>
                 
