--- a/views/Listings/edit.ejs
+++ b/views/Listings/edit.ejs
@@ -47,6 +47,7 @@
                 </div>
                 <br><br>
 
-                <button class="btn btn-dark ">Save Changes</button>
+                
+                <button class="btn btn-red btn-save">Save Changes</button>
             </form>
         </div>
