--- a/views/Listings/new.ejs
+++ b/views/Listings/new.ejs
@@ -41,9 +41,9 @@
                         <label for="country" class="form-label">country</label>
                         <input type="text" name="country" class="form-control" id="country" placeholder="India"
                             required />
-                    </div>
-                    <div class="valid-feedback">Wow !!</div>
-                    <div class="invalid-feedback">You'r hotel is on Moon ?</div>
+                            <div class="valid-feedback">Wow !!</div>
+                            <div class="invalid-feedback">Do you from Antarctica ?</div>
+                        </div>
                 </div>
 
 
@@ -52,7 +52,7 @@
                     <input type="text" name="location" class="form-control" id="location"
                         placeholder="Vadodara , Gujarat" required />
                     <div class="valid-feedback">Wow !!</div>
-                    <div class="invalid-feedback">You'r hotel is on Moon ?</div>
+                    <div class="invalid-feedback">You'r  hotel is on Moon ?</div>
                 </div>
                 <br><br>
 
