--- a/views/Listings/show.ejs
+++ b/views/Listings/show.ejs
@@ -41,7 +41,7 @@
         <a class="btn btn-red" href="/listings/<%= listing.id  %>/edit">Edit</a>
 
         <form action="/listings/<%= listing.id  %>?_method=DELETE" method="post">
-            <button class="btn btn-dark btn-delete">DELETE</button>
+            <button class="btn btn-dark">DELETE</button>
         </form> 
 
     </div>
