--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,9 +39,9 @@ body{
     transition: background-color 0.3s ease-in-out;
   }
     
-  .bn38:hover {
+  /* .bn38:hover {
     background-color: #eae6e6a3;
-  }
+  } */
 
 
   /* Footer */
@@ -55,6 +55,7 @@ body{
   }
 
   .f-info{
+    width: 100%;
     height: 8rem;
     display: flex;
     flex-direction: column;
@@ -105,7 +106,7 @@ body{
 
 .btn-red{
     background-color: #FF496A;
-    width: 5rem;
+    /* width: 5rem; */
     border: none;
 }
 
@@ -118,14 +119,10 @@ body{
     display: flex;
 }
 
-.btn-delete{
+.btn-dark{
     margin-left: 20px;
 }
 
-.btn-delete:hover{
+.btn-dark:hover{
     box-shadow: 0  0 3px rgb(0, 0, 0) !important;
-}
-
-.btn-save{
-    width: auto;
 }
