fixed icon issue

--- a/views/Listings/index.ejs
+++ b/views/Listings/index.ejs
@@ -16,6 +16,7 @@
                                 <i class="fa-solid fa-location-dot"></i>
                                 <%= listing.location %>
                                 <br />
+                                <i class="fa-solid fa-globe"></i>
                                 <%= listing.country %> <br />
                             </p>
                             
