--- a/views/Listings/error.ejs
+++ b/views/Listings/error.ejs
@@ -10,7 +10,7 @@ async function sweetalert(){
 await  Swal.fire({
   icon: "error",
   title: "Oops...",
-  text: "You enter wrong Price" ,
+  text: "Something is wrong  " ,
   footer: '<a href="#">Why do I have this issue?</a>'
 });
 }
