--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,7 +77,7 @@ body{
 
 
   /* card */
-  .card{
+  .listing-card{
     margin: 1rem 0;
     width: 300px;
     border: none;
@@ -136,4 +136,43 @@ body{
 
 .btn-dark:hover{
     box-shadow: 0  0 3px rgb(0, 0, 0) !important;
+}
+
+
+/* Icons */
+.f-info-socials i:hover{
+  color: #FF496A;
+}
+
+
+
+/* rating */
+.Rating{
+  width: 220px;
+  height: 20px;
+  margin: 0 0 0 0; 
+}
+
+.Rating p{
+  margin-bottom: 0;
+}
+
+.Rating label {
+  float: right;
+  width: 40px;
+  height: 30px;
+  cursor: pointer;
+  
+}
+.Rating label:before {
+  content: "\2605";
+  font-size: 35px;
+  color: #ccc;
+  /* line-height: 1; */
+}
+.Rating input{
+  display: none;
+}
+.Rating input:checked ~ label:before, .Rating:not(:checked) > label:hover:before, .Rating:not(:checked) > label:hover ~ label:before {
+  color: #ffb703;
 }
