--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -7,8 +7,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link bn3637 bn38" href="/listings">Home</a>
-          <a class="nav-link bn3637 bn38" href="/listings">All Listings</a>
           <a class="nav-link bn3637 bn38" href="/listings/new">Add new List</a>
+          <a class="nav-link bn3637 bn38" href="/signup">Sign Up</a>
+          <a class="nav-link bn3637 bn38" href="/login">Log In</a>
           
         </div>
       </div>
