user redirect pvs page where s/he was

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -14,7 +14,7 @@
              <a class="nav-link " href="/signup">Sign Up</a>
             <a class="nav-link " href="/login">Log In</a>
            <% } %> <% if(currUser) { %>
-            <a class="nav-link " href="/logout">Log In</a>
+            <a class="nav-link " href="/logout">Log out</a>
           <% } %>
         </div>
       </div>
