--- a/views/Listings/show.ejs
+++ b/views/Listings/show.ejs
@@ -4,7 +4,7 @@
         <div class="col-8 offset-2">
             <h3>Listing Details</h3>
         </div>
-        <div class="col-6 offset-2">
+        <div class="col-8 offset-2">
 
             <div class="card">
                 <img src="<%= listing.image  %>" class="card-img-top show-img"
@@ -18,7 +18,7 @@
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
 
-                <p> By <i>
+                <p> own by  <i>
                         <%= listing.owner.name %>
                     </i></p>
                 <p>
@@ -84,18 +84,19 @@
             <% for (let review of listing.reviews) { %>
                 <div class="card col-5 ms-3 mb-3">
                     <div class="card-body">
-                        <h5 class="card-title">Jaimin Detroja</h5>
+                        <h5 class="card-title"> hi<%= review.owner.name  %></h5>
                         <p class="card-text">
                             <%= review.content %>
                         </p>
                         <p class="card-text">
                             <%= review.rating %> <i class="fa-solid fa-star"></i>
                         </p>
-
+                        <% if(currUser && review.owner.equals(currUser._id)) { %>
                         <form action="/listings/<%= listing._id  %>/reviews/<%= review._id %>?_method=DELETE"
                             method="post" class="mb-2">
                             <button type="submit" class="btn btn-dark">Delete</button>
                         </form>
+                        <% } %>
 
                     </div>
 
